--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       <!-- CSS Files -->
       <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
       <link href="argon/css/argon-dashboard.css?v=1.1.0" rel="stylesheet" />
+      <link href="argon/css/custom.css" rel="stylesheet" />
 
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
